@@ -1,8 +1,20 @@
 Update to V0.5.5.6
 
-This release is a bug fix release. Either compare your installation to the 
-   current release or install the release from scratch and copy the changed 
-   config file from your previous installation into your new installation.
+These are the steps to update from version 0.5.5.5 to 0.5.5.6
+
+1. Edit config.inc.php in /etc/svn-access-manager directory.
+
+   Add the following line and set the values as needed:
+   // Custom Fields (NULL for not to use the field)
+	$CONF['repoPathSortOrder']		= 'ASC/DESC'; 
+
+2. Release 0.5.5.6 comes with a new feature of sorting repository access rights. 
+   That means that there are a lot of files changed. Either compare your 
+   installation to the current release or install the release from scratch and 
+   copy the changed config file from your previous installation into your new 
+   installation.
+   
+You're finished. 
    
 #-------------------------------------------------------------------------------------------#
 
