@@ -2967,6 +2967,7 @@ function doInstall() {
 			$content					= str_replace( '###VIEWVCAPACHERELOAD###', 	$_SESSION['svn_inst']['viewvcApacheReload'], $content );
 			$content					= str_replace( '###VIEWVCREALM###', 		$_SESSION['svn_inst']['viewvcRealm'], $content );
 			$content					= str_replace( '###SEPERATEFILESPERREPO###',$_SESSION['svn_inst']['perRepoFiles'], $content );
+			$content					= str_replace( '###REPOPATHSORTORDER###',	$_SESSION['svn_inst']['pathSortOrder'], $content );
 			$content					= str_replace( '###SVNADMINCMD###', 		$_SESSION['svn_inst']['svnadminCommand'], $content );
 			$content					= str_replace( '###WEBSITECHARSET###', 		$_SESSION['svn_inst']['websiteCharset'], $content );
 			$content					= str_replace( '###WEBSITEURL###',			$_SESSION['svn_inst']['websiteUrl'], $content );
@@ -3335,6 +3336,7 @@ if ($_SERVER['REQUEST_METHOD'] == "GET") {
 	$tViewvcApacheReload					= "";
 	$tViewvcRealm							= ""; 
 	$tPerRepoFiles							= "";
+	$tPathSortOrder							= "ASC";
 	$tLogging								= "";
 	$tJavaScript							= "";
 	$tUserDefaultAccess						= "";
@@ -3449,6 +3451,14 @@ if ($_SERVER['REQUEST_METHOD'] == "GET") {
 	} else {
 		$tPerRepoFilesYes					= "";
 		$tPerRepoFilesNo					= "checked";
+	}
+	
+	if( $tPathSortOrder == "ASC" ) {
+		$tPathSortOrderAsc					= "checked";
+		$tPathSortOrderDesc					= "";
+	} else {
+		$tPathSortOrderAsc					= "";
+		$tPathSortOrderDesc					= "checked";
 	}
 	
 	if( $tViewvcConfig == "YES" ) {
@@ -3598,6 +3608,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
 	$tViewvcApacheReload				= isset( $_POST['fViewvcApacheReload'] )	? ( $_POST['fViewvcApacheReload'] )		: "";
 	$tViewvcRealm						= isset( $_POST['fViewvcRealm'] )			? ( $_POST['fViewvcRealm'] )			: ""; 
 	$tPerRepoFiles						= isset( $_POST['fPerRepoFiles'] )			? ( $_POST['fPerRepoFiles'] )			: "";
+	$tPathSortOrder						= isset( $_POST['fPathSortOrder'] )			? ( $_POST['fPathSortOrder'] )			: "ASC";
 	$tLogging							= isset( $_POST['fLogging'] )				? ( $_POST['fLogging'] )				: "";
 	$tJavaScript						= isset( $_POST['fJavaScript'] )			? ( $_POST['fJavaScript'] )				: "";
 	$tPageSize							= isset( $_POST['fPageSize'] )				? ( $_POST['fPageSize'] )				: 30;
@@ -3661,6 +3672,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
 	$_SESSION['svn_inst']['viewvcApacheReload']			= $tViewvcApacheReload; 
 	$_SESSION['svn_inst']['viewvcRealm']				= $tViewvcRealm; 
 	$_SESSION['svn_inst']['perRepoFiles']				= $tPerRepoFiles;  	
+	$_SESSION['svn_inst']['pathSortOrder']				= $tPathSortOrder;
 	$_SESSION['svn_inst']['logging']					= $tLogging;
 	$_SESSION['svn_inst']['javaScript']					= $tJavaScript;
 	$_SESSION['svn_inst']['pageSize']					= $tPageSize;
@@ -4047,6 +4059,7 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
 	$tViewvcApacheReload		= isset( $_SESSION['svn_inst']['viewvcApacheReload'] ) 	? $_SESSION['svn_inst']['viewvcApacheReload'] 	: "";
 	$tViewvcRealm				= isset( $_SESSION['svn_inst']['viewvcRealm'] ) 		? $_SESSION['svn_inst']['viewvcRealm'] 			: "ViewVC Access Control";
 	$tPerRepoFiles				= isset( $_SESSION['svn_inst']['perRepoFiles'] ) 		? $_SESSION['svn_inst']['perRepoFiles'] 		: "";
+	$tPathSortOrder				= isset( $_SESSION['svn_inst']['psthSortOrder'] )		? $_SESSION['svn_inst']['pathSortOrder']		: "ASC";
 	
 	# common locations where to find grep and svn under linux/unix
    	$svnpath					= array('/usr/local/bin/svn', '/usr/bin/svn', '/bin/svn');
@@ -4196,6 +4209,14 @@ if ($_SERVER['REQUEST_METHOD'] == "POST") {
 	} else {
 		$tPerRepoFilesYes			= "";
 		$tPerRepoFilesNo			= "checked";
+	}
+	
+	if( $tPathSortOrder == "ASC" ) {
+		$tPathSortOrderAsc			= "checked";
+		$tPathSortOrderDesc			= "";
+	} else {
+		$tPathSortOrderAsc			= "";
+		$tPathSortOrderDesc			= "checked";
 	}
 	
 	if( $tViewvcConfig == "YES" ) {
